--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         //页面加载   获取全部信息
         $(function(){
             $.ajax({
-                type: "POST",//请求方式
+                type: "GET",//请求方式
                 url: "json/test.json",//地址，就是json文件的请求路径
                 dataType: "json",//数据类型可以为 text xml json  script  jsonp
                 success: function(result){//返回的参数就是 action里面所有的有get和set方法的参数
